--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,3 +53,40 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Get version
+        id: image
+        run: |
+          VERSION=$(echo ${{ github.sha }} | cut -c1-8)
+          echo VERSION=$VERSION
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+
+      - name: Setup Kustomize
+        uses: imranismail/setup-kustomize@v1
+
+      - name: Checkout kustomize repository
+        uses: actions/checkout@v4
+        with:
+          repository: danuri-team/danuri-devops
+          ref: main
+          token: ${{ secrets.ACTION_TOKEN }}
+          path: danuri-devops
+
+      - name: Update Kubernetes resources
+        run: |
+          cd danuri-devops/bmo/
+          kustomize edit set image ${{ env.IMAGE_NAME }}:${{ steps.image.outputs.version }}
+          cat kustomization.yaml
+
+      - name: Commit files
+        run: |
+          cd danuri-devops
+          git config --global user.email "github-actions@github.com"
+          git config --global user.name "github-actions"
+          git commit -am "Update image tag"
+          git push -u origin main
