--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -95,7 +95,7 @@ jobs:
       - name: Commit files
         run: |
           cd danuri-devops
-          git config --global user.email "github-actions@github.com"
-          git config --global user.name "github-actions"
-          git commit -am "Update image tag"
+          git config --global user.email "${{ vars.APP_ID }}+danuri-deploy[bot]@users.noreply.github.com"
+          git config --global user.name "danuri-deploy[bot]"
+          git commit -am "chore(bmo): update image to ${{ steps.image.outputs.version }}"
           git push -u origin main
