--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,7 +72,7 @@ jobs:
           app-id: ${{ vars.APP_ID }}
           private-key: ${{ secrets.APP_PRIVATE_KEY }}
           owner: danuri-team
-          repositories: danuri-devops
+          repositories: Danuri-Devops
 
       - name: Setup Kustomize
         uses: imranismail/setup-kustomize@v1
